/*
  Nudm_SDM

  Nudm Subscriber Data Management Service.   Â© 2022, 3GPP Organizational Partners (ARIB, ATIS, CCSA, ETSI, TSDSI, TTA, TTC).   All rights reserved. 

  The version of the OpenAPI document: 2.1.7

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package go_package.protos;

option go_package = "go_package/protos/models";

import public "ambr_rm.proto";
import public "area.proto";
import public "nssai.proto";
import public "service_area_restriction.proto";
import public "any_type.proto";

message PlmnAmData {

  string mccmnc = 1;

  AnyType value = 2;
}

message AccessAndMobilitySubscriptionData {

  string supportedFeatures = 46698251;

  repeated string gpsis = 98573140;

  repeated string internalGroupIds = 426262935;

  AmbrRm subscribedUeAmbr = 435029289;

  Nssai nssai = 105126902;

  repeated Area forbiddenAreas = 83511566;

  ServiceAreaRestriction serviceAreaRestriction = 118353529;

  PlmnAmData plmnAmData = 118353530;

  int32 rfspIndex = 252384319;

  int32 subsRegTimer = 431498855;

  int32 ueUsageType = 320224203;

  bool micoAllowed = 92241281;

  repeated string subscribedDnnList = 307202602;
}
