/*
  Unified Data Repository Service API file for subscription data

  Unified Data Repository Service (subscription data). The API version is defined in 3GPP TS 29.504. Â© 2022, 3GPP Organizational Partners (ARIB, ATIS, CCSA, ETSI, TSDSI, TTA, TTC). All rights reserved. 

  The version of the OpenAPI document: -

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package go_package.protos;

option go_package = "go_package/protos/models";

import public "auth_method.proto";
import public "sequence_number.proto";

message AuthenticationSubscription {

  string KTAB = 1;

  AuthMethod authenticationMethod = 171121290;

  string encPermanentKey = 151269176;

  string protectionParameterId = 34082295;

  SequenceNumber sequenceNumber = 280253848;

  string authenticationManagementField = 213942049;

  string algorithmId = 336944621;

  string encOpcKey = 66143704;

  string encTopcKey = 29588378;

  bool vectorGenerationInHss = 511500136;

  AuthMethod n5gcAuthMethod = 33604180;

  bool rgAuthenticationInd = 256003219;

  string supi = 3541979;

}
