/*
  Nudm_SDM

  Nudm Subscriber Data Management Service.   Â© 2022, 3GPP Organizational Partners (ARIB, ATIS, CCSA, ETSI, TSDSI, TTA, TTC).   All rights reserved. 

  The version of the OpenAPI document: 2.1.7

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package go_package.protos;

option go_package = "go_package/protos/models";

import public "additional_snssai_data.proto";
import public "snssai.proto";

message Nssai {

  string supportedFeatures = 46698251;

  repeated Snssai defaultSingleNssais = 457002632;

  repeated Snssai singleNssais = 53116328;

  string provisioningTime = 271735643;

  map<string, AdditionalSnssaiData> additionalSnssaiData = 320566581;

}
