/*
  Unified Data Repository Service API file for subscription data

  Unified Data Repository Service (subscription data). The API version is defined in 3GPP TS 29.504. Â© 2022, 3GPP Organizational Partners (ARIB, ATIS, CCSA, ETSI, TSDSI, TTA, TTC). All rights reserved. 

  The version of the OpenAPI document: -

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package go_package.protos;

option go_package = "go_package/protos/models";

import public "sign.proto";
import public "sqn_scheme.proto";

message SequenceNumber {

  string sqnScheme = 480885868;

  string sqn = 114128;

  map<string, int32> lastIndexes = 467510902;

  int32 indLength = 466281565;

  Sign difSign = 48279009;

}
